fix react bricks link

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
@@ -26,11 +26,9 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![CMS with Inline Visual editing for Next.js with App routing](/emails/issues/169/reactbricks.jpg)](https://tripetto.com/sdk/this-week-in-react/?utm_source=thisweekinreact&utm_medium=sponsor&utm_campaign=sdk)
+[![CMS with Inline Visual editing for Next.js with App routing](/emails/issues/169/reactbricks.jpg)](https://reactbricks.com/?utm_source=twir&utm_campaign=twir_2024&utm_medium=email)
 
 **[CMS with Inline Visual editing for Next.js with App routing](https://reactbricks.com?utm_source=twir&utm_campaign=twir_2024&utm_medium=email)**
-
-
 
 [**Set up a project in just 1 minute**](https://reactbricks.com/sign-up?utm_source=twir&utm_campaign=twir_2024&utm_medium=email) with the CLI and define your own Visual blocks as React components to convey your pixel-perfect corporate brand, using any CSS framework. Try the new Next.js starter with Server Components!
 
@@ -59,22 +57,16 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 **[The most comprehensive User Management Platform](https://clerk.com/?utm_source=sponsorship&utm_medium=newsletter&utm_campaign=thisweekinreact&utm_term=02-28-24)**
 
-
 Clerk streamlines React app authentication and user management, ensuring a quick setup for the modern web.
 
 Experience the benefits of Clerk:
 
-*   💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations. Customize with any CSS library and deploy on your domain
-    
-*   📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
-    
-*   ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
-    
-*   🎁 User management, social login, magic links, MFA, and more out of the box
-    
+- 💅 Pre-built UI components for sign-in, sign-up, user profiles, and organizations. Customize with any CSS library and deploy on your domain
+- 📦 SDKs for React, React Native, Next.js, Redwood, Remix, and other frameworks
+- ⚡ Integrations with Firebase, Supabase, Convex, and other BaaS providers
+- 🎁 User management, social login, magic links, MFA, and more out of the box
 
 Dive into Clerk's [quickstarts and tutorials](https://clerk.com/docs/quickstarts/overview?utm_source=sponsorship&utm_medium=newsletter&utm_campaign=thisweekinreact&utm_term=02-28-24) to kickstart your project🚀
-
 
 ---
 
